--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "axios": "^1.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0"
   }
 }
