--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "concurrently \"npm run backend\"  \"npm run start --prefix client\"",
+    "backend": "node server.js",
+    "frontend": "npm run front --prefix client",
+    "dev": "concurrently \"npm run backend\"  \"npm run start --prefix client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.1.3",
+    "concurrently": "^7.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   },
